Added more into report

--- a/Report/Referances.bib
+++ b/Report/Referances.bib
@@ -27,4 +27,26 @@
 }
 
 
+@misc{TflTravelBot,
+	author = {TFL},
+	title = {Tfl TravelBot},
+	year = {2020},
+	howpublished = {\url{https://www.facebook.com/tfltravelbot/}}
+}
+
+@inproceedings{roller2020recipes,
+	author={Stephen Roller, Emily Dinan, Naman Goyal, Da Ju, Mary Williamson, Yinhan Liu, Jing Xu, Myle Ott, Kurt Shuster, Eric M. Smith, Y-Lan Boureau, Jason Weston},
+	title={Recipes for building an open-domain chatbot},
+	journal={arXiv preprint arXiv:2004.13637},
+	year={2020},
+	howpublished = {\url{https://arxiv.org/abs/2004.13637}}	
+}
+
+@misc{Google Assistant,
+	author = {Google},
+	title = {Google Assistant},
+	year = {2016},
+	howpublished = {\url{https://assistant.google.com/intl/en_uk/}}
+}
+
    
